# job-automation

./: .gitignore  README.md  pyproject.toml  rountine_1.sh
ArizonaStateUniversity/: ArizonaStateUniversity_LabAide:Bio181(_JD.json
Code/: asu-job.py
Prompts/: resume-DS.txt  resume-SDE.txt
data/: saurabh-profile.json
data/prompts/: resume-ML.txt  resume-cv-prompt.txt
output/ArchivalAssista/: ArchivalAssista_JD.json  ArchivalAssista_cv.txt  ArchivalAssista_resume.json
output/Asu101Executive/: Asu101Executive_JD.json  Asu101Executive_cv.txt  Asu101Executive_resume.json
output/AuditSpecialist/: AuditSpecialist_JD.json  AuditSpecialist_cv.txt  AuditSpecialist_resume.json
output/DataAide(FwsEli/: DataAide(FwsEli_JD.json  DataAide(FwsEli_cv.txt  DataAide(FwsEli_resume.json
output/Education&Engag/: Education&Engag_JD.json  Education&Engag_cv.txt  Education&Engag_resume.json
output/FilmAssistantSt/: FilmAssistantSt_JD.json  FilmAssistantSt_cv.txt  FilmAssistantSt_resume.json
output/Grader:SchoolOf/: Grader:SchoolOf_JD.json  Grader:SchoolOf_cv.txt  Grader:SchoolOf_resume.json
output/InstructionalAi/: InstructionalAi_JD.json  InstructionalAi_cv.txt  InstructionalAi_resume.json
output/LabAide:Bio181(/: LabAide:Bio181(_JD.json  LabAide:Bio181(_cv.txt  LabAide:Bio181(_resume.json
output/LegalResearchAi/: LegalResearchAi_JD.json  LegalResearchAi_cv.txt  (+1 more)
src/: asu-job.py  extract.py  linkedin-connect.py  user-profile.json  visited-asu-jobs.json  visited-asu-jobs.txt  visited-linkedin-profile.json  visited-linkedin-profiles.json  visited_job_ids.txt
(+51 files in other folders)
